force-app/main/default/objects/Appealed_Violation__c/Appealed_Violation__c.object-meta.xml
<CustomObject>
    <description>Object is necessary for AR Reporting of appeals on violations</description>
    <label>Appealed Violation</label>
    <nameField>
        <displayFormat>AV-{0000000}</displayFormat>
        <label>Appealed Violation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appealed Violations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>