force-app/main/default/objects/Appealed_Violation__c/fields/Appeal_Status__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Status__c</fullName>
    <description>Displays the status of the appeal</description>
    <formula>TEXT(Liability_Appeal__r.Appeal__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appeal Status</label>
    <type>Text</type>
</CustomField>