force-app/main/default/objects/Appealed_Violation__c/fields/Liability_Appeal__c.field-meta.xml
<CustomField>
    <fullName>Liability_Appeal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Liability appeal. Used to gain access to the violations being appealed.</description>
    <label>Liability Appeal</label>
    <referenceTo>Liability_Appeal__c</referenceTo>
    <relationshipLabel>Appealed Violations</relationshipLabel>
    <relationshipName>Appealed_Violations</relationshipName>
    <type>Lookup</type>
</CustomField>